--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@fontsource/open-sans": "^4.5.13",
     "@ionic/react": "^6.3.4",
     "@testing-library/jest-dom": "^5.16.5",
