--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
+[[headers]]
+    for = "/*"
+    [headers.values]
+    Strict-Transport-Security = '''
+    max-age=63072000;
+    includeSubDomains;
+    preload'''
